--- a/index-START.html
+++ b/index-START.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta name=" viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-  <title>JS + CSS Clock</title>
-  <link rel="icon" href="https://fav.farm/🔥" />
+  <title>JS+CSS-Clock</title>
+  <link rel="icon" href="https://fav.farm/🕰️" />
 </head>
 <body>
 
@@ -11,7 +11,7 @@
     <div class="clock">
       <div class="clock-face">
         <div class="hand hour-hand"></div>
-        <div class="hand min-hand"></div>
+        <div class="hand mins-hand"></div>
         <div class="hand second-hand"></div>
       </div>
     </div>
@@ -19,7 +19,8 @@
 
   <style>
     html {
-      background: #018DED url(https://unsplash.it/1500/1000?image=881&blur=5);
+      background: #018DED url(https://images.unsplash.com/photo-1503197979108-c824168d51a8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2833&q=80
+    );
       background-size: cover;
       font-family: 'helvetica neue';
       text-align: center;
@@ -63,12 +64,85 @@
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%; /* will transform the x axis */
+      transform: rotate(90deg) ;
+      transition:all 0.05s;
+      transition-timing-function: cubic-bezier(0.1,2.7,0.58,1);
+
     }
 
   </style>
-
+   
   <script>
+   
+    const secondHand = document.querySelector('.second-hand');
+    const minsHand = document.querySelector('.mins-hand');
+    const hourHand = document.querySelector('.hour-hand');
+    
 
+   /*  function setDate() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) *360)+90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+
+      console.log(seconds);
+
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + ((seconds / 60) * 6)+90;
+      minsHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+      console.log(mins);
+
+      const hours = now.getHours();
+      const hoursDegrees = ((hours / 12) *360)+ ((mins / 60) * 30)+ 90;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+
+       console.log(hours); 
+    } */
+
+
+/* const secondHand = document.querySelector('.second-hand');
+const minHand = document.querySelector('.mins-hand');
+const hourHand = document.querySelector('.hour-hand');
+
+function calculateRotation(degrees, timeComponent, totalUnits) {
+  return ((timeComponent / totalUnits) * degrees) + 90;
+}
+
+function setRotation(element, rotationDegrees) {
+  element.style.transform = `rotate(${rotationDegrees}deg)`;
+}
+
+function setDate() {
+  const now = new Date();
+  const seconds = now.getSeconds();
+  const minutes = now.getMinutes();
+  const hours = now.getHours();
+
+  const secondsDegrees = calculateRotation(360, seconds, 60);
+  const minutesDegrees = calculateRotation(360, minutes, 60) + (secondsDegrees / 60);
+  const hoursDegrees = calculateRotation(360, hours, 12) + (minutesDegrees / 12);
+
+  setRotation(secondHand, secondsDegrees);
+  setRotation(minHand, minutesDegrees);
+  setRotation(hourHand, hoursDegrees);
+}
+
+setInterval(setDate, 1000); */
+
+    function setDate() {
+      const now = new Date();
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + 90;
+      hourHand.style.transform = `rotate(${minsDegrees}deg)`;
+
+      const seconds = now.getSeconds();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+    }
+  // Call the setDate function every second
+    setInterval(setDate, 1000);
 
   </script>
 </body>
