--- a/index-START.html
+++ b/index-START.html
@@ -75,9 +75,9 @@
    
   <script>
    
-    const secondHand = document.querySelector('.second-hand');
+   /*  const secondHand = document.querySelector('.second-hand');
     const minsHand = document.querySelector('.mins-hand');
-    const hourHand = document.querySelector('.hour-hand');
+    const hourHand = document.querySelector('.hour-hand'); */
     
 
    /*  function setDate() {
@@ -102,7 +102,7 @@
     } */
 
 
-/* const secondHand = document.querySelector('.second-hand');
+ const secondHand = document.querySelector('.second-hand');
 const minHand = document.querySelector('.mins-hand');
 const hourHand = document.querySelector('.hour-hand');
 
@@ -129,18 +129,10 @@ function setDate() {
   setRotation(hourHand, hoursDegrees);
 }
 
-setInterval(setDate, 1000); */
+setInterval(setDate, 1000); 
 
-    function setDate() {
-      const now = new Date();
-      const mins = now.getMinutes();
-      const minsDegrees = ((mins / 60) * 360) + 90;
-      hourHand.style.transform = `rotate(${minsDegrees}deg)`;
-
-      const seconds = now.getSeconds();
-      const secondsDegrees = ((seconds / 60) * 360) + 90;
-      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-    }
+ 
+    
   // Call the setDate function every second
     setInterval(setDate, 1000);
 
