--- a/index-START.html
+++ b/index-START.html
@@ -8,23 +8,30 @@
 <body>
 
 
-    <div class="clock">
-      <div class="clock-face">
-        <div class="hand hour-hand"></div>
-        <div class="hand mins-hand"></div>
-        <div class="hand second-hand"></div>
+    <div class="frame">
+      <div class="clock">
+        <div class="clock-face">
+          <div class="hand hour-hand"></div>
+          <div class="hand mins-hand"></div>
+          <div class="hand second-hand"></div>
+        </div>
       </div>
     </div>
 
 
-  <style>
+ <style>
     html {
-      background: #018DED url(https://images.unsplash.com/photo-1503197979108-c824168d51a8?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2833&q=80
-    );
-      background-size: cover;
-      font-family: 'helvetica neue';
+      background: #018DED url('https://images.unsplash.com/photo-1607875333342-4c2ff0022728?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3041&q=80');
       text-align: center;
       font-size: 10px;
+      background-size: cover;
+      background-repeat: no-repeat;
+      /* Prevent image repetition */
+     background-position: 60% 30%;
+      /* Center the image */
+     min-height:100vh;
+     min-width: 100vw;
+
     }
 
     body {
@@ -32,6 +39,7 @@
       font-size: 2rem;
       display: flex;
       flex: 1;
+      justify-content: center;
       min-height: 100vh;
       align-items: center;
     }
@@ -40,22 +48,34 @@
       width: 30rem;
       height: 30rem;
       border: 20px solid white;
-      border-radius: 50%;
       margin: 50px auto;
       position: relative;
       padding: 2rem;
-      box-shadow:
-        0 0 0 4px rgba(0,0,0,0.1),
-        inset 0 0 0 3px #EFEFEF,
-        inset 0 0 10px black,
-        0 0 10px rgba(0,0,0,0.2);
+      box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #EFEFEF, inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
+      border-radius: 50%;
+      background-color: rgba(221, 221, 204, 0.509);
+      border: solid 5vmin #eee;
+      box-shadow: 0 0 5px 0 rgba(0, 0, 0, .25) inset, 0 5px 10px 5px rgba(0, 0, 0, .25);
+      box-sizing: border-box;
+    }
+
+    .clock:before {
+      border-radius: 50%;
+      bottom: -2vmin;
+      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, .25) inset;
+      content: "";
+      left: -2vmin;
+      position: absolute;
+      right: -2vmin;
+      top: -2vmin;
     }
 
     .clock-face {
       position: relative;
       width: 100%;
       height: 100%;
-      transform: translateY(-3px); /* account for the height of the clock hands */
+      transform: translateY(-3px);
+      /* account for the height of the clock hands */
     }
 
     .hand {
@@ -64,21 +84,18 @@
       background: black;
       position: absolute;
       top: 50%;
-      transform-origin: 100%; /* will transform the x axis */
-      transform: rotate(90deg) ;
-      transition:all 0.05s;
-      transition-timing-function: cubic-bezier(0.1,2.7,0.58,1);
-
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
-
   </style>
-   
   <script>
-   
+
    /*  const secondHand = document.querySelector('.second-hand');
     const minsHand = document.querySelector('.mins-hand');
     const hourHand = document.querySelector('.hour-hand'); */
-    
+
 
    /*  function setDate() {
       const now = new Date();
@@ -98,7 +115,7 @@
       const hoursDegrees = ((hours / 12) *360)+ ((mins / 60) * 30)+ 90;
       hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
 
-       console.log(hours); 
+       console.log(hours);
     } */
 
 
@@ -129,10 +146,10 @@ function setDate() {
   setRotation(hourHand, hoursDegrees);
 }
 
-setInterval(setDate, 1000); 
+setInterval(setDate, 1000);
 
- 
-    
+
+
   // Call the setDate function every second
     setInterval(setDate, 1000);
 
