changed the background and the arms style

--- a/index-START.html
+++ b/index-START.html
@@ -21,7 +21,7 @@
 
  <style>
     html {
-      background: #018DED url('https://images.unsplash.com/photo-1607875333342-4c2ff0022728?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=3041&q=80');
+      background: #447949 url(https://images.unsplash.com/photo-1690394472920-473848125540?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2879&q=80);
       text-align: center;
       font-size: 10px;
       background-size: cover;
@@ -50,13 +50,13 @@
       border: 20px solid white;
       margin: 50px auto;
       position: relative;
-      padding: 2rem;
+      padding: 1rem;
       box-shadow: 0 0 0 4px rgba(0, 0, 0, 0.1), inset 0 0 0 3px #EFEFEF, inset 0 0 10px black, 0 0 10px rgba(0, 0, 0, 0.2);
       border-radius: 50%;
       background-color: rgba(221, 221, 204, 0.509);
-      border: solid 5vmin #eee;
+      border: solid 3vi #eee;
       box-shadow: 0 0 5px 0 rgba(0, 0, 0, .25) inset, 0 5px 10px 5px rgba(0, 0, 0, .25);
-      box-sizing: border-box;
+
     }
 
     .clock:before {
@@ -82,6 +82,7 @@
       width: 50%;
       height: 6px;
       background: black;
+      border-radius: 60%;
       position: absolute;
       top: 50%;
       transform-origin: 100%;
@@ -89,6 +90,7 @@
       transition: all 0.05s;
       transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
+
   </style>
   <script>
 
